# OpenGL-add-in

./: CMakeLists.txt  LICENSE  README.md  main.cpp
glutHelper/: helper.h
glutHelper/color/: Color.cpp  Color.h
glutHelper/figures/: figures.h
glutHelper/figures/circle/: Circle.cpp  Circle.h
glutHelper/figures/curve/: Curve.cpp  Curve.h
glutHelper/figures/line/: Line.cpp  Line.h
glutHelper/figures/oval/: Oval.cpp  Oval.h
glutHelper/figures/pixel/: Pixel.cpp  Pixel.h
glutHelper/figures/rect/: Rect.cpp  Rect.h
glutHelper/figures/square/: Square.cpp  Square.h
glutHelper/figures/triangle/: Triangle.cpp  Triangle.h
glutHelper/interfaces/: IDraw.h  IFill.h  IMove.h
